# rustApiInternship

./: .gitignore  Cargo.toml  README.md  Rocket.toml  oui
rustApiInternship/: Cargo.toml
src/: main.rs  struct.rs  structs.rs
static/: package.json
test/: test.rs  tests.rs
