[package]
name = "rust_api_internship"
version = "0.1.0"
authors = ["Killy85 <goureau.n.a@hotmail.fr>"]

[dependencies]
rocket_cors= "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
postgres = { version = "0.13" }
rocket = "0.3.8"
rocket_codegen = "0.3.8"
chrono   = {version ="*", features = ["serde"] }
yyid = "*"

[dependencies.rocket_contrib]
version = "0.3"
default-features = false
features = ["json"]
